--- a/app/src/main/res/layout/activity_dialog.xml
+++ b/app/src/main/res/layout/activity_dialog.xml
@@ -13,4 +13,16 @@
         android:textSize="30sp"
         />
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:text="@string/btn_txt1"
+        android:textColor="@color/textAccent"
+        android:background="@color/colorPrimary"
+        android:padding="20dp"
+        android:id="@+id/dialog_launcher"
+        android:textAppearance="@style/TextAppearance.AppCompat"/>
+
 </RelativeLayout>
