--- a/app/src/main/res/layout/fragment_mood_dialog.xml
+++ b/app/src/main/res/layout/fragment_mood_dialog.xml
@@ -4,7 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:weightSum="1"
-    android:id="@+id/baseLayout">
+    android:id="@+id/baseLayout"
+    android:padding="10dp">
 
     <TextView
         android:layout_width="match_parent"
@@ -17,6 +18,7 @@
         android:text="How are you feeling today?"
         android:id="@+id/MoodLabel"/>
 
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -24,7 +26,7 @@
         android:layout_marginTop="50dp">
 
         <RadioGroup
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:padding="10dp"
@@ -65,9 +67,19 @@
                 android:layout_weight="1"
                 android:text="Sad"
                 android:id="@+id/radioButton5"/>
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Submit"
+                android:id="@+id/submitButton"/>
 
-
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Cancel"
+                android:id="@+id/cancelButton"/>
         </RadioGroup>
-
     </LinearLayout>
 </LinearLayout>
